--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,13 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-        
+      - run:  echo "${{ format('models/{0}/**/*', matrix.MODEL_NAME) }}"; echo "${{ hashFiles(format('models/{0}/**/*', matrix.MODEL_NAME)) }}"
       - uses: actions/cache@v3
         id: cache
         with:
           path: |
             results
-          key: ${{ runner.os }}-${{ hashFiles('models/${{ matrix.MODEL_NAME }}/**/*') }}
+          key: ${{ runner.os }}-${{ hashFiles(format('models/{0}/**/*', matrix.MODEL_NAME)) }}
         
       - if: ${{ steps.cache.outputs.cache-hit == 'false' }}
         name: Set up MATLAB
