--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,21 +41,20 @@ jobs:
         uses: actions/checkout@v2
       - run:  echo "${{ format('models/{0}/**/*', matrix.MODEL_NAME) }}"; echo "${{ hashFiles(format('models/{0}/**/*', matrix.MODEL_NAME)) }}"
       - uses: actions/cache@v3
-        id: cache
+        id: cache-results
         with:
-          path: |
-            results
-          key: ${{ runner.os }}-${{ hashFiles(format('models/{0}/**/*', matrix.MODEL_NAME)) }}
+          path: results/*.json
+          key: ${{ hashFiles(format('models/{0}/**/*', matrix.MODEL_NAME)) }}
       - run: echo "${{steps.cache.outputs.cache-hit}}"  
-      - if: ${{ steps.cache.outputs.cache-hit == 'false' }}
+      - if: steps.cache-results.outputs.cache-hit != 'true'
         name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
         
-      - if: ${{ steps.cache.outputs.cache-hit == 'false' }}
+      - if: steps.cache-results.outputs.cache-hit != 'true'
         name: Set up Dynare
         run: "DEBIAN_FRONTEND=noninteractive sudo apt-get install --no-upgrade --no-install-recommends -y dynare dynare-matlab x13as"
         
-      - if: ${{ steps.cache.outputs.cache-hit == 'false' }}
+      - if: steps.cache-results.outputs.cache-hit != 'true'
         name: Run script
         uses: matlab-actions/run-command@v1
         env:
